# rust-text-rpg

./: .gitignore  Cargo.toml  IDEAS.md  LICENSE  README.md
assets/maps/: start.map
src/: lib.rs  main.rs  render.rs
src/game/: exit_splash.rs  input.rs  loggers.rs  map.rs  menu.rs  mod.rs  sound.rs  start_splash.rs
src/widgets/: label.rs  mod.rs
