[package]
name = "rust-rpg"
version = "0.1.0"
authors = ["George Popoff <popoff96@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
rodio = "0.11.0"
log = "0.4.8"
log4rs = "0.11.0"
backtrace = "0.3.46"
lazy_static = "1.4.0"